tests/negative/gold/prefixed_assign3b_test.gold
tests/negative/prefixed_assign3b_test.toit:6:6: error: Can't assign to class 'A'
  pa.A = 3
     ^
Compilation failed.
